k8s/frontent-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend-container
        image: samidha7/tic-tac-toe-frontend:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
