k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe-ingress
spec:
  rules:
  - host: samidhawani.in
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-service
            port:
              number: 8081
    
      - paths:
        pathType: Prefix
        path: /api
        backend:
          service:
            name: backend-service
            port:
              number: 5000
